--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish wasm
-      run: dotnet publish -c Release -o deploy DaisyBlazor.Client
+      run: dotnet publish -c Release -o deploy MduiBlazor.Client
       
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
