--- a/MduiBlazor.Client/MduiBlazor.Client.csproj
+++ b/MduiBlazor.Client/MduiBlazor.Client.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <BlazorCacheBootResources>false</BlazorCacheBootResources>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
 
