update - auto build gitee pages

--- a/.github/workflows/deployghpages&mirrortogitee.yml
+++ b/.github/workflows/deployghpages&mirrortogitee.yml
@@ -8,23 +8,27 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+  
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: |
             6.0.x 
             7.0.x
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --no-restore
+
     - name: Test
       run: dotnet test --no-build --verbosity normal
+
     - name: Publish wasm
       run: dotnet publish -c Release -o deploy MduiBlazor.Client
       
@@ -35,7 +39,8 @@ jobs:
         BRANCH: gh-pages
         FOLDER: deploy/wwwroot
         CLEAN: true
-    - name: Mirror to Gitee
+
+    - name: Sync to Gitee
       uses: Yikun/hub-mirror-action@master
       with:
           src: 'github/gaofen13'    						
@@ -45,3 +50,11 @@ jobs:
           force_update: true
           static_list: "mdui-blazor"   					
           debug: true
+
+    - name: Build Gitee Pages
+      uses: yanglbme/gitee-pages-action@main
+      with:
+          gitee-username: gaofen13
+          gitee-password: ${{ secrets.GITEE_PASSWORD }}
+          gitee-repo: gaofen13/mdui-blazor
+          branch: gh-page
