--- a/MduiBlazor.Shared/MduiBlazor.Shared.csproj
+++ b/MduiBlazor.Shared/MduiBlazor.Shared.csproj
@@ -19,4 +19,12 @@
     <ProjectReference Include="..\MduiBlazor\MduiBlazor.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\data\material_icon.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
