--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,17 +7,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
+      with: 
+        dotnet-version: 7.0.x
+    - name: Restore Dependencies
+      run: dotnet restore
     - name: Build
-      run: dotnet build -c Release
+      run: dotnet build -c Release --no-restore
+      working-directory: ./MduiBlazor
     - name: Test
       run: dotnet test -c Release --no-build
+      working-directory: ./MduiBlazor
     - name: Pack nugets
       run: dotnet pack -c Release --no-build --output .
+      working-directory: ./MduiBlazor
     - name: Push to NuGet
       run: dotnet nuget push "*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
+      working-directory: ./MduiBlazor
