--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,16 +14,8 @@ jobs:
       uses: actions/setup-dotnet@v3
       with: 
         dotnet-version: 7.0.x
-    - name: Restore Dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build -c Release --no-restore
-      working-directory: ./MduiBlazor
-    - name: Test
-      run: dotnet test -c Release --no-build
-      working-directory: ./MduiBlazor
     - name: Pack nugets
-      run: dotnet pack -c Release --no-build --output .
+      run: dotnet pack -c Release --output
       working-directory: ./MduiBlazor
     - name: Push to NuGet
       run: dotnet nuget push "*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
