--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       with: 
         dotnet-version: 7.0.x
     - name: Pack nugets
-      run: dotnet pack -c Release --output
+      run: dotnet pack -c Release --output nupkgs
       working-directory: ./MduiBlazor
     - name: Push to NuGet
       run: dotnet nuget push "*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
