--- a/.github/workflows/deployghpages&mirrortogitee.yml
+++ b/.github/workflows/deployghpages&mirrortogitee.yml
@@ -17,9 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x 
-		
-    - name: Install wasm-tools
-      run: dotnet workload install wasm-tools
+      
+    - run: dotnet workload install wasm-tools
 
     - name: Restore dependencies
       run: dotnet restore
