--- a/MduiBlazor.Client/MduiBlazor.Client.csproj
+++ b/MduiBlazor.Client/MduiBlazor.Client.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <!--对于老的浏览器版本需要禁用以下两项-->
+    <WasmEnableSIMD>false</WasmEnableSIMD>
     <WasmEnableExceptionHandling>false</WasmEnableExceptionHandling>
   </PropertyGroup>
 
