--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,13 +29,11 @@
         },
         {
             "name": ".NET Core Launch (wasm)",
-            "type": "coreclr",
+            "type": "blazorwasm",
             "request": "launch",
             "preLaunchTask": "build wasm",
             "program": "${workspaceFolder}/MduiBlazor.Client/bin/Debug/net8.0/MduiBlazor.Client.dll",
-            "args": [],
             "cwd": "${workspaceFolder}/MduiBlazor.Client",
-            "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
                 "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
