test github actions

--- a/.github/workflows/deployghpages.yml
+++ b/.github/workflows/deployghpages.yml
@@ -1,4 +1,4 @@
-name: .Net_deployghpages&mirrortogitee
+name: deploywasmghpages
 
 on:
   push:
@@ -40,21 +40,5 @@ jobs:
         FOLDER: deploy/wwwroot
         CLEAN: true
 
-    - name: Sync to Gitee
-      uses: Yikun/hub-mirror-action@v1.3
-      with:
-          src: 'github/gaofen13'    						
-          dst: 'gitee/gaofen13'     						
-          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}  
-          dst_token:  ${{ secrets.GITEE_TOKEN }}    
-          force_update: true
-          static_list: "mdui-blazor"   					
-          debug: true
-
-    - name: Build Gitee Pages
-      uses: yanglbme/gitee-pages-action@v1.4.1
-      with:
-          gitee-username: gaofen13
-          gitee-password: ${{ secrets.GITEE_PASSWORD }}
-          gitee-repo: gaofen13/mdui-blazor
-          branch: gh-pages
+    - name: Call Sync to Gitee
+      uses: ./.github/workflows/synctogitee&buildpages.yml@main
