--- a/.github/workflows/synctogitee&buildpages.yml
+++ b/.github/workflows/synctogitee&buildpages.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
+    
     - name: Sync to Gitee
       uses: Yikun/hub-mirror-action@v1.4
       with:
