--- a/.github/workflows/deployghpages.yml
+++ b/.github/workflows/deployghpages.yml
@@ -42,3 +42,7 @@ jobs:
 
     - name: Call Sync to Gitee
       uses: ./.github/actions/gitee
+      with:
+        gitee-private-key: ${{ secrets.GITEE_PRIVATE_KEY }}
+        gitee-token: ${{ secrets.GITEE_TOKEN }}
+        gitee-password: ${{ secrets.GITEE_PASSWORD}}
