--- a/.github/actions/gitee/action.yml
+++ b/.github/actions/gitee/action.yml
@@ -3,7 +3,7 @@ name: syncgitee
 on:
   workflow_call:
     secrets:
-      GITEE_PRIVATE-KEY:
+      GITEE_PRIVATE_KEY:
         require: true
       GITEE_TOKEN:
         require: true
@@ -22,7 +22,7 @@ jobs:
       with:
           src: 'github/gaofen13'    						
           dst: 'gitee/gaofen13'     						
-          dst_key: ${{ secrets.GITEE_PRIVATE-KEY }}  
+          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}  
           dst_token:  ${{ secrets.GITEE_TOKEN }}    
           force_update: true
           static_list: "mdui-blazor"   					
