--- a/.github/actions/gitee/action.yml
+++ b/.github/actions/gitee/action.yml
@@ -11,11 +11,11 @@ on:
         require: true
 
 jobs:
-  sync-to=gitee:
+  sync-to-gitee:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/labeler@v4
 
     - name: Sync to Gitee
       uses: Yikun/hub-mirror-action@v1.4
