--- a/.github/workflows/deployghpages.yml
+++ b/.github/workflows/deployghpages.yml
@@ -40,9 +40,9 @@ jobs:
         FOLDER: deploy/wwwroot
         CLEAN: true
 
-    - name: Call Sync to Gitee
-      uses: ./.github/actions/gitee/action.yml@main
-      secrets:
-        GITEE_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
-        GITEE_TOKEN: ${{ secrets.GITEE_TOKEN }}
-        GITEE_PASSWORD: ${{ secrets.GITEE_PASSWORD }}
+  call-sync-to-gitee
+    uses: ./.github/actions/gitee/action.yml@main
+    secrets:
+      GITEE_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
+      GITEE_TOKEN: ${{ secrets.GITEE_TOKEN }}
+      GITEE_PASSWORD: ${{ secrets.GITEE_PASSWORD }}
