--- a/.github/workflows/deployghpages.yml
+++ b/.github/workflows/deployghpages.yml
@@ -41,6 +41,7 @@ jobs:
         CLEAN: true
 
   call-sync-to-gitee:
+    needs: build
     uses: ./.github/workflows/syncgitee.yml
     secrets:
       GITEE_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
