--- a/.github/workflows/deployghpages.yml
+++ b/.github/workflows/deployghpages.yml
@@ -52,6 +52,4 @@ jobs:
     needs: build
     uses: ./.github/workflows/syncatomgit.yml
     secrets:
-      GITEE_PRIVATE_KEY: ${{ secrets.AtomGit_PRIVATE_KEY }}
-      GITEE_TOKEN: ${{ secrets.GITEE_TOKEN }}
-      GITEE_PASSWORD: ${{ secrets.GITEE_PASSWORD }}
+      AtomGit_PRIVATE_KEY: ${{ secrets.AtomGit_PRIVATE_KEY }}
