--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/MduiBlazor.Server/MduiBlazor.Server.csproj"
+                "${workspaceFolder}/MduiBlazor.WebApp/MduiBlazor.WebApp.csproj"
             ],
             "problemMatcher": "$msCompile"
         },
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/MduiBlazor.Server/MduiBlazor.Server.csproj",
+                "${workspaceFolder}/MduiBlazor.WebApp/MduiBlazor.WebApp.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -31,7 +31,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/MduiBlazor.Server/MduiBlazor.Server.csproj",
+                "${workspaceFolder}/MduiBlazor.WebApp/MduiBlazor.WebApp.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
