--- a/.github/workflows/deployghpages.yml
+++ b/.github/workflows/deployghpages.yml
@@ -32,7 +32,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal
 
     - name: Publish wasm
-      run: dotnet publish -c Release MduiBlazor.Client
+      run: dotnet publish -c Release MduiBlazor.WebAssembly
 
     - name: Rewrite base href
       uses: SteveSandersonMS/ghaction-rewrite-base-href@5b54862a8831e012d4f1a8b2660894415fdde8ec # v1.1.0
